field inputs gap fix

--- a/packages/fakeyou.com/src/components/common/TempInput/Input.scss
+++ b/packages/fakeyou.com/src/components/common/TempInput/Input.scss
@@ -1,7 +1,13 @@
-input {
-  margin-bottom: 1rem !important;
+.fy-input {
+  input {
+    margin-bottom: 1rem;
 
-  :last-child {
-    margin-bottom: 0 !important;
+    :only-child {
+      margin-bottom: 0;
+    }
+
+    :last-child {
+      margin-bottom: 0;
+    }
   }
 }
