--- a/packages/fakeyou.com/src/components/common/TempTextArea/TextArea.scss
+++ b/packages/fakeyou.com/src/components/common/TempTextArea/TextArea.scss
@@ -1,7 +1,13 @@
-textarea {
-  margin-bottom: 1rem !important;
+.fy-textarea {
+  &:textarea {
+    margin-bottom: 1rem;
 
-  :last-child {
-    margin-bottom: 0 !important;
+    :only-child {
+      margin-bottom: 0;
+    }
+
+    :last-child {
+      margin-bottom: 0;
+    }
   }
 }
